--- a/index.html
+++ b/index.html
@@ -1,114 +1,91 @@
-<!DOCTYPE html>
-<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
-<head>
+<!DOCTYPE HTML>
+<!--
+	Identity by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Identity by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-   <!--- basic page needs
-   ================================================== -->
-   <meta charset="utf-8">
-	<title>Khronos - Demo</title>
-	<meta name="description" content="">  
-	<meta name="author" content="">
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-   <!-- mobile specific metas
-   ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+				<!-- Main -->
+					<section id="main">
+						<header>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<h1>Jane Doe</h1>
+							<p>Senior Psychonautics Engineer</p>
+						</header>
+						<!--
+						<hr />
+						<h2>Extra Stuff!</h2>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field">
+									<input type="text" name="name" id="name" placeholder="Name" />
+								</div>
+								<div class="field">
+									<input type="email" name="email" id="email" placeholder="Email" />
+								</div>
+								<div class="field">
+									<select name="department" id="department">
+										<option value="">Department</option>
+										<option value="sales">Sales</option>
+										<option value="tech">Tech Support</option>
+										<option value="null">/dev/null</option>
+									</select>
+								</div>
+								<div class="field">
+									<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
+								</div>
+								<div class="field">
+									<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
+								</div>
+								<div class="field">
+									<label>But are you a robot?</label>
+									<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
+									<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
+								</div>
+							</div>
+							<ul class="actions special">
+								<li><a href="#" class="button">Get Started</a></li>
+							</ul>
+						</form>
+						<hr />
+						-->
+						<footer>
+							<ul class="icons">
+								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
+								<li><a href="#" class="icon brands fa-instagram">Instagram</a></li>
+								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
+							</ul>
+						</footer>
+					</section>
 
- 	<!-- CSS
-   ================================================== -->
-   <link rel="stylesheet" href="css/base.css">  
-   <link rel="stylesheet" href="css/demo.css">
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="copyright">
+							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</footer>
 
-   <!-- script
-   ================================================== -->
-	<script src="js/modernizr.js"></script>
+			</div>
 
-   <!-- favicons
-	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+		<!-- Scripts -->
+			<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+			</script>
 
-</head>
-
-<body>
-
-	<!-- header 
-   ================================================== -->
-   <header>
-   	<div class="row">
-   		<div class="col-twelve">
-
-   			<h1>Khronos<span>.</span></h1>
-
-   			<p class="lead">
-   			Khronos is a creative pack of coming soon template pages. It's elegant and clean design makes it
-				perfect for every creative people, corporate, agency or anyone who is currently building their
-				site and want to show a coming soon page in a creative way. Khronos is available in three style 
-				variations: static, slideshow, and particle background. It is fully responsive and
-				retina ready, looks great on any screen and devices. It is also mailchimp ready and has a working ajax contact form.
-   			</p>
-
-   		</div>
-   	</div>   	
-   </header> <!-- /header -->
-
-
-  	<!-- main content
-   ================================================== -->
-   <main>
-   	<div class="row">
-   		<div class="block-1-3 block-s-1-2 block-mob-full">
-   			<div class="bgrid">
-   				<a href="demo-static.html" title="static background">
-   					<div class="image-part">
-   						<img src="images/demo/demo-static.jpg" alt="">
-   						<div class="overlay"></div>
-   						<div class="link-icon"><i class="fa fa-plus"></i></div>
-   					</div>
-   					<div class="demo-title">
-   						<h3>Static Background</h3>
-   					</div>
-   				</a>
-   			</div>
-
-   			<div class="bgrid">
-   				<a href="demo-slides.html" title="slideshow background">
-   					<div class="image-part">
-   						<img src="images/demo/demo-slideshow.jpg" alt="">
-   						<div class="overlay"></div>
-   						<div class="link-icon"><i class="fa fa-plus"></i></div>
-   					</div>
-   					<div class="demo-title">
-   						<h3>Slideshow Background</h3>
-   					</div>
-   				</a>
-   			</div>
-
-   			<div class="bgrid">
-   				<a href="demo-particles.html" title="particles background">
-   					<div class="image-part">
-   						<img src="images/demo/demo-particles.jpg" alt="">
-   						<div class="overlay"></div>
-   						<div class="link-icon"><i class="fa fa-plus"></i></div>
-   					</div>
-   					<div class="demo-title">
-   						<h3>Particles Background</h3>
-   					</div>
-   				</a>
-   			</div>
-   		</div>
-   	</div>   
-   </main> <!-- /main -->
-
-   <div id="preloader"> 
-    	<div id="loader"></div>
-   </div> 
-
-   <!-- Java Script
-   ================================================== --> 
-   <script src="js/jquery-2.1.3.min.js"></script>
-   <script src="js/main.js"></script>
-
-</body>
-
+	</body>
 </html>
